database/postgres/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: database
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/part-of: database
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
