database/postgres/ingress-tcp.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres
  namespace: database
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`slonik.lab`)
      services:
        - name: postgres
          port: 5432
  tls:
    secretName: monster-server-cert
    options:
      name: mtls-strict
      namespace: traefik
